--- a/src/app/pages/pokemon/_[id].html
+++ b/src/app/pages/pokemon/_[id].html
@@ -61,12 +61,14 @@
               <div
                 class="w-24 h-24 bg-black/5 rounded flex items-center justify-center border border-black/10"
               >
-                <img
-                  [src]="pokemon()?.sprites?.front_default"
-                  [alt]="pokemon()?.name"
-                  class="w-20 h-20 pixelated"
-                  style="image-rendering: pixelated"
-                />
+                @if (spriteUrl()) {
+                  <img
+                    [src]="spriteUrl()"
+                    [alt]="pokemon()?.name"
+                    class="w-20 h-20 object-contain"
+                    style="image-rendering: pixelated"
+                  />
+                }
               </div>
               <div
                 class="bg-[#3b82f6] text-white px-3 py-1 rounded border-2 border-[#1e3a8a] font-bold text-sm shadow-sm"
