--- a/src/app/pages/pokemon/_[id].html
+++ b/src/app/pages/pokemon/_[id].html
@@ -59,13 +59,13 @@
             <!-- Top Row: Sprite & ID -->
             <div class="flex justify-between items-start mb-2">
               <div
-                class="w-24 h-24 bg-black/5 rounded flex items-center justify-center border border-black/10 overflow-hidden"
+                class="w-24 h-24 bg-black/5 rounded flex items-center justify-center border border-black/10 overflow-hidden relative"
               >
                 @if (spriteUrl()) {
                   <img
                     [src]="spriteUrl()"
                     [alt]="pokemon()?.name"
-                    class="w-20 h-20 object-contain"
+                    class="w-full h-full object-contain p-1 drop-shadow-md"
                   />
                 }
               </div>
@@ -99,11 +99,6 @@
                   <span>{{ getStat('hp') }}</span>
                 </div>
                 <div class="flex justify-between">
-                  <span>HP:</span>
-                  <span>{{ getStat('hp') }}</span>
-                </div>
-                <!-- Mockup has HP twice, replicating layout but using real data -->
-                <div class="flex justify-between">
                   <span>ATK:</span>
                   <span>{{ getStat('attack') }}</span>
                 </div>
@@ -119,11 +114,6 @@
                   <span>Sp. DEF:</span>
                   <span>{{ getStat('special-defense') }}</span>
                 </div>
-                <div class="flex justify-between">
-                  <span>Sp. DEF:</span>
-                  <span>{{ getStat('special-defense') }}</span>
-                </div>
-                <!-- Mockup has Sp.Def twice -->
                 <div class="flex justify-between">
                   <span>SPD:</span>
                   <span>{{ getStat('speed') }}</span>
